Fix broken layout on categories

--- a/theme/css/article.css
+++ b/theme/css/article.css
@@ -1,9 +1,7 @@
 .blog-body > section > main {
-	padding-left: 0;
-	margin-left: 1em;
 	flex: 1;
-	display: flex;
-	flex-direction: column;
+	display: inherit;
+	flex-direction: inherit;
 }
 
 .blog-body > section > main > nav > h1 {
