--- a/theme/css/article_groups.css
+++ b/theme/css/article_groups.css
@@ -1,8 +1,3 @@
-.blog-body > section {
-	padding-left: 0;
-	margin-left: 1em;
-}
-
 .blog-body > section > nav > h1 {
 	display: none;
 }
